Ready to turn in

--- a/recipe.html
+++ b/recipe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Mockup Assignment</title>
+  <title>Recipe Page for Mock Up Assignment</title>
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html" >HOME</a></li>
         <li><a href="recipe.html" >RECIPE</a></li>
-        <li><a href="demo.html" >DEMO</a></li>
+        <li><a href="demo.html" >OPTIONS</a></li>
         <li><a href="#" >Link 4</a></li>
         <li><a href="#" >Link 5</a></li>
         <li><a href="#" >Link 6</a></li>
