--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Mockup Assignment</title>
+  <title>Demo Page for Mockup Assignment</title>
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
@@ -12,9 +12,9 @@
     <h1>Week 4 Mock-Up</h1>
     <nav>
       <ul>
-        <li><a href="#" >HOME</a></li>
+        <li><a href="index.html" >HOME</a></li>
         <li><a href="recipe.html" >RECIPE</a></li>
-        <li><a href="demo.html" >OPTIONS</a></li>
+        <li><a href="#" >OPTIONS</a></li>
         <li><a href="#" >Link 4</a></li>
         <li><a href="#" >Link 5</a></li>
         <li><a href="#" >Link 6</a></li>
@@ -23,9 +23,16 @@
     </nav>
   </header>
 <!-- main area with photo and text --> 
-  <div class=right>
-    <img src="images/stirfry.jpg" title="Stir Fry Image" alt="Stir Fry image">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempus bibendum tristique. Aliquam in mi congue, dapibus massa ac, feugiat velit. Quisque ornare lacus nec dui tincidunt, a dignissim dolor cursus. Vestibulum mi tellus, bibendum rhoncus commodo at, porta eu ex. Mauris ullamcorper et nulla aliquam feugiat. Integer placerat lectus urna, ut suscipit felis porttitor vitae. Sed sodales eu orci vel pellentesque. Sed molestie, ligula et ornare tincidunt, justo massa condimentum massa, id blandit neque ipsum non quam. Quisque id molestie purus, ut luctus magna. In tempor justo nisl, vel accumsan lorem facilisis vel. Sed eu mattis nisi. Etiam ultricies suscipit tristique. Quisque luctus condimentum erat, id placerat nulla pulvinar id.</p>
+  <div class="demo">
+    <img src="images/chefhat.jpg" title="Chef Hat Image" alt="Chef Hat image">
+    <p>There are other options for cooking fajitas like the recipt shared below</p>
+    <ol>
+      <li>Crack an egg into a large bowl and begin to wisk</li>
+      <li>Add cumin, paprika, and your chopped onions</li>
+      <li>Melt butter into a large saucepan and add your tomatoes</li>
+      <li>Pour your wisked egg and onions over the tomatoes</li>
+      <li>Attempt to convice your guests that you made a fajita</li>
+    </ol>
   </div>
 <!-- left bar with list of photos -->
   <div class=left>
