made more accessible using nav skip for screen readers

--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Week 4 Mock-Up</h1>
+    <a href="#content" class="offscreen">skip to content</a>
     <nav>
       <ul>
         <li><a href="index.html" >HOME</a></li>
@@ -24,6 +25,7 @@
   </header>
 <!-- main area with photo and text --> 
   <div class="demo">
+    <a name="content"></a>
     <img src="images/chefhat.jpg" title="Chef Hat Image" alt="Chef Hat image">
     <p>There are other options for cooking fajitas like the recipt shared below</p>
     <ol>
