--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Week 4 Mock-Up</h1>
+    <a href="#content" class="offscreen">skip to content</a>
     <nav>
       <ul>
         <li><a href="#" >HOME</a></li>
@@ -24,11 +25,12 @@
   </header>
 <!-- main area with photo and text --> 
   <div class=right>
+    <a name="content"></a>
     <img src="images/stirfry.jpg" title="Stir Fry Image" alt="Stir Fry image">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempus bibendum tristique. Aliquam in mi congue, dapibus massa ac, feugiat velit. Quisque ornare lacus nec dui tincidunt, a dignissim dolor cursus. Vestibulum mi tellus, bibendum rhoncus commodo at, porta eu ex. Mauris ullamcorper et nulla aliquam feugiat. Integer placerat lectus urna, ut suscipit felis porttitor vitae. Sed sodales eu orci vel pellentesque. Sed molestie, ligula et ornare tincidunt, justo massa condimentum massa, id blandit neque ipsum non quam. Quisque id molestie purus, ut luctus magna. In tempor justo nisl, vel accumsan lorem facilisis vel. Sed eu mattis nisi. Etiam ultricies suscipit tristique. Quisque luctus condimentum erat, id placerat nulla pulvinar id.</p>
   </div>
 <!-- left bar with list of photos -->
-  <div class=left>
+  <div class=left> 
     <nav>
       <ul>
         <li><a href="#" >photo 1</a></li>
