--- a/recipe.html
+++ b/recipe.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Week 4 Mock-Up</h1>
+    <a href="#content" class="offscreen">skip to content</a>
     <nav>
       <ul>
         <li><a href="index.html" >HOME</a></li>
@@ -24,6 +25,7 @@
   </header>
 <!-- main area with photo and text --> 
   <div class=figure>
+    <a name="content"></a>
     <img src="images/onions.jpg" title="onions for cooking" alt="onions for cooking">
     <p>Onions are essential for fajitas</p>
     <img src="images/tomato.jpg" title="tomatoes for cooking" alt="tomatoes for cooking">
